Agenda de duas telas

--- a/Agenda/app/src/main/res/layout/activity_main.xml
+++ b/Agenda/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,7 +11,8 @@
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
 
 
         <TextView
@@ -31,7 +33,7 @@
             tools:layout_editor_absoluteY="4dp" />
 
         <Button
-            android:id="@+id/txCadastrar"
+            android:id="@+id/Cadastro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CADASTRAR"
