Adicionando o Banco de Dados

--- a/Agenda/app/src/main/res/layout/activity_main2.xml
+++ b/Agenda/app/src/main/res/layout/activity_main2.xml
@@ -18,13 +18,7 @@
             android:textSize="36sp"
             android:textStyle="bold"/>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="244dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center|center_horizontal|center_vertical"
-        android:background="@drawable/ic_launcher_background"
-        android:srcCompat="@android:java_thumb" />
+
 
     <EditText
             android:id="@+id/txtCodigo"
@@ -33,44 +27,44 @@
             android:inputType="number"
             android:hint="Código" />
 
-        <TextView
-            android:id="@+id/txtnome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nome:"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/txtnome"
+        android:layout_width="match_parent"
+        android:layout_height="29dp"
+        android:text="Nome:"
+        android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edt_nome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+    <EditText
+        android:id="@+id/edt_nome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
 
-        <TextView
-            android:id="@+id/txt_celular"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Celular"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/txt_celular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Celular"
+        android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edt_celular"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+    <EditText
+        android:id="@+id/edt_celular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
 
-        <TextView
-            android:id="@+id/txt_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="E-Mail:"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/txt_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="E-Mail:"
+        android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edt_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
+    <EditText
+        android:id="@+id/edt_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10" />
 
         <TextView
             android:id="@+id/txt_endereco"
@@ -79,39 +73,39 @@
             android:text="Endereço"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/edt_endereco"
-            android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/edt_endereco"
+        android:layout_width="match_parent"
+        android:layout_height="59dp"
+        android:ems="10" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="84dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/bntLimpar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10" />
+            android:layout_weight="1"
+            android:text="Limpar"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/bntExcluir"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:text="Excluir" />
 
-            <Button
-                android:id="@+id/bntLimpar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Limpar" />
+        <Button
+            android:id="@+id/bntSalvar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Salvar" />
 
-            <Button
-                android:id="@+id/bntSalvar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Salvar" />
-
-            <Button
-                android:id="@+id/bntExcluir"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Excluir" />
-
-        </LinearLayout>
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,6 +140,12 @@
 
     <ImageView
         android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/java_thumb" />
+
+    <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/java_thumb" />
