--- a/ProjetoAgenda/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoAgenda/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,17 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="466dp"
+        android:layout_height="426dp"
         android:layout_gravity="center|center_horizontal|center_vertical"
-        android:background="@color/colorAccent"
-        app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+        android:background="@drawable/estrelas" />
 
     <Button
         android:id="@+id/cadastro"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cadastro"
-        android:background="@color/colorPrimaryDark"/>
+        android:layout_height="85dp"
+        android:background="#c344"
+        android:textColor="#ffff"
+        android:text="Cadastro" />
 
- </LinearLayout>
+</LinearLayout>
 
